--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@sanity/client": "^6.1.2",
+    "@sanity/image-url": "^1.0.2",
+    "buffer": "^6.0.3",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
@@ -21,12 +24,14 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "^13.9.0",
     "react-native-web": "~0.18.11",
-    "tailwindcss-react-native": "^1.7.10"
+    "tailwindcss-react-native": "^1.7.10",
+    "whatwg-url": "^12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "eslint": "^8.41.0",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-plugin-react": "^7.32.2",
+    "react-native-url-polyfill": "^1.3.0"
   },
   "private": true
 }
