--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-heroicons": "^3.2.0",
@@ -24,6 +25,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "^13.9.0",
     "react-native-web": "~0.18.11",
+    "tailwindcss": "^3.3.2",
     "tailwindcss-react-native": "^1.7.10",
     "whatwg-url": "^12.0.1"
   },
